--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "webpack":"webpack --config webpack.config.js",
+    "webpack": "webpack --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -33,5 +33,6 @@
     "react-router": "^2.0.0"
   },
   "dependencies": {
+    "node-version-compare": "^1.0.1"
   }
 }
