--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "webpack": "webpack --config webpack.config.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --compilers js:babel-register --recursive"
   },
   "repository": {
     "type": "git",
@@ -26,14 +26,22 @@
     "babel-loader": "^6.2.1",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "babel-register": "^6.7.2",
+    "chai": "^3.5.0",
     "express": "^4.13.4",
+    "mocha": "^2.4.5",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
-    "webpack": "^1.12.12",
-    "react-router": "^2.0.0"
+    "react-router": "^2.0.0",
+    "webpack": "^1.12.12"
   },
   "dependencies": {
     "deb-version-compare": "^1.1.1",
-    "react-dropzone": "^3.4.0"
+    "immutable": "^3.8.1",
+    "react-dropzone": "^3.4.0",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2",
+    "redux-immutable": "^3.0.6",
+    "redux-thunk": "^2.0.1"
   }
 }
